--- a/form.html
+++ b/form.html
@@ -4,106 +4,262 @@
   <meta charset="UTF-8">
   <title>Employee Payroll Form</title>
   <link rel="stylesheet" href="form.css">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-  <script>
-    $(document).ready(function () {
-      // Populate date dropdowns
-      for (let i = 1; i <= 31; i++) $('#day').append(`<option value="${i}">${i}</option>`);
-      for (let i = 1; i <= 12; i++) $('#month').append(`<option value="${i}">${i}</option>`);
-      for (let i = 2000; i <= 2025; i++) $('#year').append(`<option value="${i}">${i}</option>`);
-
-      // Submit form
-      $('#payrollForm').on('submit', function (e) {
-        e.preventDefault();
-
-        const departments = [];
-        $('input[name="department"]:checked').each(function () {
-          departments.push($(this).val());
-        });
-
-        const day = $('#day').val();
-        const month = $('#month').val();
-        const year = $('#year').val();
-        const startDate = `${day}/${month}/${year}`;
-
-        const userData = {
-          name: $('#name').val(),
-          gender: $('input[name="gender"]:checked').val(),
-          departments: departments,
-          salary: $('#salary').val(),
-          startDate: startDate,
-          profile: $('input[name="profile"]:checked').val(),
-          notes: $('#notes').val()
-        };
-
-        $.ajax({
-          url: "http://localhost:3000/users",
-          method: "POST",
-          data: JSON.stringify(userData),
-          contentType: "application/json",
-          success: function () {
-            alert("Employee added!");
-            window.location.href = "index.html";
-          },
-          error: function () {
-            alert("Error saving data!");
-          }
-        });
-      });
-    });
-  </script>
 </head>
 <body>
+  <header>
+    <div class="head-content">
+      <div class="logo">
+        <a href="index.html" class="logo">
+          <img src="money.png" alt="logo" />
+          <h1><span>EMPLOYEE</span><br />PAYROLL</h1>
+        </a>
+      </div>
+    </div>
+  </header>
+
   <div class="form-container">
-    <h2>Employee Payroll Form</h2>
-    <form id="payrollForm">
-      <label>Name</label>
-      <input type="text" id="name" placeholder="Enter name" required>
+    <div class="content">
+      <h2>Employee Payroll Form</h2>
+      <form id="payrollForm">
+        <div class="form-group">
+          <label>Name</label>
+          <div class="name-alert">
+            <input type="text" id="name">
+            <div class="error-message" id="name-error">Name is required</div>
+          </div>
+        </div>
 
-      <label>Profile image</label>
-      <div class="profile-images">
-        <label><input type="radio" name="profile" value="https://img.icons8.com/color/48/000000/user.png"><img src="https://img.icons8.com/color/48/000000/user.png"/></label>
-        <label><input type="radio" name="profile" value="https://img.icons8.com/fluency/48/administrator-male.png"><img src="https://img.icons8.com/fluency/48/administrator-male.png"/></label>
+        <div class="form-group">
+          <label>Profile image</label>
+          <div class="profile-alert">
+            <div class="profile-images">
+              <label><input type="radio" name="profile" value="pp1.jpg"><img src="pp1.jpg"/></label>
+              <label><input type="radio" name="profile" value="pp2.jpg"><img src="pp2.jpg"/></label>
+              <label><input type="radio" name="profile" value="pp3.jpg"><img src="pp3.jpg"/></label>
+              <label><input type="radio" name="profile" value="pp4.jpg"><img src="pp4.jpg"/></label>
+            </div>
+            <div class="error-message" id="profile-error">Please select a profile image</div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label>Gender</label>
+          <div class="gender-alert">
+            <div class="gender">
+              <label><input type="radio" name="gender" value="Male"> Male</label>
+              <label><input type="radio" name="gender" value="Female"> Female</label>
+            </div>
+            <div class="error-message" id="gender-error">Please select gender</div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label>Department</label>
+          <div class="department-alert">
+            <div class="departments">
+              <label><input type="checkbox" name="department" value="HR"> HR</label>
+              <label><input type="checkbox" name="department" value="Sales"> Sales</label>
+              <label><input type="checkbox" name="department" value="Finance"> Finance</label>
+              <label><input type="checkbox" name="department" value="Engineer"> Engineer</label>
+              <label><input type="checkbox" name="department" value="Others"> Others</label>
+            </div>
+            <div class="error-message" id="department-error">Please select at least one department</div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label>Salary</label>
+          <div class="salary-alert">
+            <select id="salary">
+              <option value="">Select Salary</option>
+              <option value="10000">10,000</option>
+              <option value="20000">20,000</option>
+              <option value="30000">30,000</option>
+            </select>
+            <div class="error-message" id="salary-error">Please select a salary</div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label>Start Date</label>
+          <div class="date-alert">
+            <div class="date-select">
+              <select id="day"><option value="">Day</option></select>
+              <select id="month"><option value="">Month</option></select>
+              <select id="year"><option value="">Year</option></select>
+            </div>
+            <div class="error-message" id="date-error">Please select a complete start date</div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label>Notes</label>
+          <div class="note-alert">
+            <textarea id="notes" rows="3"></textarea>
+            <div class="error-message" id="notes-error">Please enter notes</div>
+          </div>
+        </div>
+
+        <div class="buttons">
+          <div><button type="button">Cancel</button></div>
+          <div>
+            <button type="submit">Submit</button>
+            <button type="reset">Reset</button>
+          </div>
+        </div>
+      </form>
+
+      <div id="success-message" style="display: none; color: green; font-weight: bold; margin-top: 20px;">
+        Form submitted successfully! Redirecting...
       </div>
-
-      <label>Gender</label>
-      <label><input type="radio" name="gender" value="Male"> Male</label>
-      <label><input type="radio" name="gender" value="Female"> Female</label>
-
-      <label>Department</label>
-      <div class="departments">
-        <label><input type="checkbox" name="department" value="HR"> HR</label>
-        <label><input type="checkbox" name="department" value="Sales"> Sales</label>
-        <label><input type="checkbox" name="department" value="Finance"> Finance</label>
-        <label><input type="checkbox" name="department" value="Engineer"> Engineer</label>
-        <label><input type="checkbox" name="department" value="Others"> Others</label>
-      </div>
-
-      <label>Salary</label>
-      <select id="salary">
-        <option value="">Select Salary</option>
-        <option value="10000">10,000</option>
-        <option value="20000">20,000</option>
-        <option value="30000">30,000</option>
-      </select>
-
-      <label>Start Date</label>
-      <div class="date-select">
-        <select id="day"><option value="">Day</option></select>
-        <select id="month"><option value="">Month</option></select>
-        <select id="year"><option value="">Year</option></select>
-      </div>
-
-      <label>Notes</label>
-      <textarea id="notes" rows="3"></textarea>
-
-      <div class="buttons">
-        <button type="button" id="cancel">Cancel</button>
-        <button type="submit">Submit</button>
-        <button type="reset">Reset</button>
-      </div>
-    </form>
+    </div>
   </div>
+
+  <script>
+    for (let i = 1; i <= 31; i++) day.innerHTML += `<option value="${i}">${i}</option>`;
+    for (let i = 1; i <= 12; i++) month.innerHTML += `<option value="${i}">${i}</option>`;
+    for (let i = 2000; i <= 2025; i++) year.innerHTML += `<option value="${i}">${i}</option>`;
+  </script>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", async () => {
+      const editId = localStorage.getItem("editEmployeeId");
+      if (editId) {
+        try {
+          const res = await fetch(`http://localhost:3000/employees/${editId}`);
+          const emp = await res.json();
+
+          document.getElementById("name").value = emp.name;
+          document.querySelector(`input[name="profile"][value="${emp.profileImage.split('/').pop()}"]`).checked = true;
+          document.querySelector(`input[name="gender"][value="${emp.gender}"]`).checked = true;
+
+          emp.departments.forEach(dep => {
+            const checkbox = document.querySelector(`input[name="department"][value="${dep}"]`);
+            if (checkbox) checkbox.checked = true;
+          });
+
+          document.getElementById("salary").value = emp.salary;
+          const [day, month, year] = emp.startDate.split("-");
+          document.getElementById("day").value = day;
+          document.getElementById("month").value = month;
+          document.getElementById("year").value = year;
+
+          document.getElementById("notes").value = emp.notes;
+
+          // Change submit button label
+          document.querySelector("button[type='submit']").textContent = "Update";
+        } catch (err) {
+          console.error("Failed to fetch employee data:", err);
+        }
+      }
+    });
+  </script>
+
+  <script>
+    document.getElementById("payrollForm").addEventListener("submit", async function (e) {
+      e.preventDefault();
+
+      let isValid = true;
+
+      const name = document.getElementById("name");
+      const profile = document.querySelector("input[name='profile']:checked");
+      const gender = document.querySelector("input[name='gender']:checked");
+      const departments = Array.from(document.querySelectorAll("input[name='department']:checked"));
+      const salary = document.getElementById("salary");
+      const day = document.getElementById("day").value;
+      const month = document.getElementById("month").value;
+      const year = document.getElementById("year").value;
+      const notes = document.getElementById("notes");
+
+      // Clear previous errors
+      document.querySelectorAll(".error-message").forEach(e => e.style.display = "none");
+      document.querySelectorAll(".error").forEach(el => el.classList.remove("error"));
+
+      // Validation
+      if (name.value.trim() === "") {
+        name.classList.add("error");
+        document.getElementById("name-error").style.display = "block";
+        isValid = false;
+      }
+
+      if (!profile) {
+        document.querySelector(".profile-images").classList.add("error");
+        document.getElementById("profile-error").style.display = "block";
+        isValid = false;
+      }
+
+      if (!gender) {
+        document.querySelector(".gender").classList.add("error");
+        document.getElementById("gender-error").style.display = "block";
+        isValid = false;
+      }
+
+      if (departments.length === 0) {
+        document.querySelector(".departments").classList.add("error");
+        document.getElementById("department-error").style.display = "block";
+        isValid = false;
+      }
+
+      if (salary.value === "") {
+        salary.classList.add("error");
+        document.getElementById("salary-error").style.display = "block";
+        isValid = false;
+      }
+
+      if (!day || !month || !year) {
+        document.querySelector(".date-select").classList.add("error");
+        document.getElementById("date-error").style.display = "block";
+        isValid = false;
+      }
+
+      if (notes.value.trim() === "") {
+        notes.classList.add("error");
+        document.getElementById("notes-error").style.display = "block";
+        isValid = false;
+      }
+
+      if (!isValid) return;
+
+      const profileSrc = profile.nextElementSibling.src;
+      const employeeData = {
+        name: name.value.trim(),
+        profileImage: profileSrc,
+        gender: gender.value,
+        departments: departments.map(dep => dep.value),
+        salary: salary.value,
+        startDate: `${day}-${month}-${year}`,
+        notes: notes.value.trim()
+      };
+
+      const editId = localStorage.getItem("editEmployeeId");
+      const url = editId
+        ? `http://localhost:3000/employees/${editId}`
+        : `http://localhost:3000/employees`;
+      const method = editId ? "PUT" : "POST";
+
+      try {
+        const res = await fetch(url, {
+          method,
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify(employeeData)
+        });
+
+        if (res.ok) {
+          document.getElementById("success-message").style.display = "block";
+          this.reset();
+          localStorage.removeItem("editEmployeeId");
+          setTimeout(() => {
+            window.location.href = "index.html";
+          }, 2000);
+        } else {
+          alert("Something went wrong!");
+        }
+      } catch (err) {
+        alert("Error: " + err.message);
+      }
+    });
+  </script>
 </body>
 </html>
