few new updates on the edit opiton

--- a/form.html
+++ b/form.html
@@ -171,7 +171,7 @@
       const year = document.getElementById("year").value;
       const notes = document.getElementById("notes");
 
-      // Clear previous errors
+      //clearing error messages previous one
       document.querySelectorAll(".error-message").forEach(e => e.style.display = "none");
       document.querySelectorAll(".error").forEach(el => el.classList.remove("error"));
 
