--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,7 @@
         <div class="top-actions">
   <div class="search-wrapper">
     <button class="search-btn" onclick="toggleSearch()"><img src="search.svg" alt=""></button>
-          <!-- <input type="text" placeholder="Search..." class="search-btn" /> -->
+          
     <input type="text" id="searchInput" placeholder="Search..." />
   </div>
  <a href="form.html" class="add-user-btn" >+ Add User</a>
@@ -93,7 +93,8 @@
             }
           });
         }
-      });$('.edit-btn').on('click', function () {
+      });
+      $('.edit-btn').on('click', function () {
   const row = $(this).closest('tr');
   const userId = row.data('id');
   localStorage.setItem('editEmployeeId', userId); // Store ID
@@ -112,39 +113,13 @@
     }
   }
 </script>
-<script>
-  async function fetchEmployees() {
-    try {
-      const response = await fetch("http://localhost:3000/users");
-      const data = await response.json();
 
-      const tbody = document.querySelector("tbody");
-      tbody.innerHTML = "";
-
-      data.forEach(emp => {
-        const row = document.createElement("tr");
-        row.innerHTML = `
-          <td><img class="avatar" src="${emp.profileImage}" alt="avatar">${emp.name}</td>
-          <td>${emp.gender}</td>
-          <td>${emp.departments.map(dep => `<span class="tag">${dep}</span>`).join(" ")}</td>
-          <td>₹${emp.salary}</td>
-          <td>${emp.startDate}</td>
-          
-        `;
-        tbody.appendChild(row);
-      });
-    } catch (err) {
-      console.error("Failed to fetch employees", err);
-    }
-  }
-
-  window.onload = fetchEmployees;
-</script>
 
 
 
 </body>
 </html>
+
 <!-- <!DOCTYPE html>
 <html lang="en">
 <head>
