--- a/form.html
+++ b/form.html
@@ -101,7 +101,7 @@
         </div>
 
         <div class="buttons">
-          <div><button type="button">Cancel</button></div>
+          <div><button type="button"><a href="index.html" class="logo">Cancel</a></button></div>
           <div>
             <button type="submit">Submit</button>
             <button type="reset">Reset</button>
